Fix height overflow on "NoteMain" wrapper;

--- a/src/scss/NoteMain.scss
+++ b/src/scss/NoteMain.scss
@@ -25,7 +25,7 @@
   &__wrapper{
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: calc(100% - 55px);
     background-color: #eee;
     & > div{
       flex: 1;
